Revision history for Perl extension Module::Build.

 - Added 'gnu' and 'gnukfreebsd' as Unix variants. [Niko Tyni]

 - Fixed a couple bugs in how we quote arguments to external processes
   when they have to pass through the shell.  Also much more
   thoroughly tested our quoting now.

 - Edited the Module::Build::API docs prose about the 'license' field
   in response to some comments on the module-authors mailing list.

0.2808_02

 - Fixed a typo in some example code in the Cookbook. [Jeremy Leader]

 - Custom typemaps were being looked for in places that don't quite
   exist; fixed. [Michael G Schwern]

 - QNX/Neutrino is now considered to be Unix. [rt.cpan.org 32214]

 - Added 'gpl2' and 'gpl3' to the list of valid licenses. [Allen
   Engelhardt]

 - Fixed our Data::Dumper wrapper's sensitivity to users who might set
   $Data::Dumper::Terse. [Spotted by Dominique Dumont]

 - Documented the fix_shebang_line() method. [Elliot Shank]

 - Applied the 'const' modifier to version() and xs_version() XS
   functions we use during testing. [Robin Barker]

 - Fixed processing of INC=, POLLUTE=, INSTALLDIRS=, and LIB= for
   passthrough/small Makefile.PLs.

 - perl Build.PL --sign=1 now signs. [Michael G Schwern]

 - Fixed processing of INSTALLDIRS=whatever for compatibility
   Makefiles. [Spotted by John Peacock]

 - Zillions of special-cases have been added in Compat.pm for dealing
   with the special Makefile system on VMS. [John E. Malmberg]

 - Fixed some stuff in how VMS command-args get quoted. [John E. Malmberg]

 - VMS now overrides localize_file_path() and localize_dir_path() so
   we don't need to do special stuff in the general case. [John
   E. Malmberg]

 - Added a few more VMS-specific entries to the default MANIFEST.SKIP
   file that (sometimes) gets created during the 'manifest'
   action. [John E. Malmberg]

 - Fixed a catdir() that should have been a catfile() when creating a
   ppmdist. [John E. Malmberg]
